# python-C-extension-type

./: CMakeLists.txt  mymodule.c  setup.in.sh  test.py
